--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
     "id":"reflecs.components.http",
-    "type":"library",
+    "type":"package",
     "value": {
         "use": ["reflecs"]
     }
