--- a/project.json
+++ b/project.json
@@ -2,6 +2,8 @@
     "id":"reflecs.components.http",
     "type":"package",
     "value": {
+        "author": "Sander Mertens",
+        "description": "HTTP components for reflecs",
         "use": ["reflecs"]
     }
 }
